# mermaid-viewer

./: README.md  build-dist.js  index.html  package-lock.json  package.json  playwright.config.js  script.js  server.js  start-server.bat  styles.css
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
docs/: system-diagram.md
docs/adrs/: 001-use-tauri-for-desktop.md  002-database-migration-workflow.md
e2e/: diagram-rendering.spec.js
src/: preprocessMermaid.js  preprocessMermaid.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
