[package]
name = "mermaid-viewer"
version = "0.1.0"
description = "A Tauri-based desktop mermaid diagram viewer with CLI support"
authors = ["alejandroe"]
license = "MIT"
repository = "https://github.com/alejandroechev/mermaid-viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.0", features = [] }
